# decimal754

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  example  test
Decimal754Test/Decimal754Test.xcodeproj/: project.pbxproj
Decimal754Test/Decimal754Test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Decimal754Test/Decimal754Test.xcodeproj/project.xcworkspace/xcuserdata/sandhaven.xcuserdatad/: UserInterfaceState.xcuserstate
Decimal754Test/Decimal754Test.xcodeproj/xcuserdata/sandhaven.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: decimal.h
src/: example.cpp  main.cpp  test.cpp  tests.cpp
